feat: slicing alternatif error page

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
 
     <!-- Set the favicon for the site, using an SVG icon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
 
     <!-- Make the page responsive by setting the viewport to device width -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title of the page displayed on the browser tab -->
-    <title>Vite + React + TS</title>
+    <title>Sentra Web Media</title>
   </head>
   <body>
     <!-- The root element where React will mount the application -->
